# Airbnb-Django

./: pyproject.toml  requirements.txt  steps.txt
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chatroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_rename_ends_at_experience_end_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  (+1 more)
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+5 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+4 files in other folders)
