[tool.poetry]
name = "airbnb-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airbnb_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
