[tool.poetry]
name = "airbnb-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airbnb_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
pillow = "^9.2.0"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.134.3"}
strawberry-graphql-django = "^0.7"
pyjwt = "^2.5.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
